# GlasgowAstro.Explorer

./: README.md  main.py  pyproject.toml
models/: alien_fauna.py  alien_flora.py  alien_life.py  discovery.py  explorer.py  logbook.py  planet.py  sample.py
tools/: log_discovery_tool.py  move_explorer_tool.py  scan_area_tool.py  summarise_discoveries_tool.py
